<resources>
    <string name="app_name">AppConnectSample</string>

    <string name="ok_button">OK</string>

    <string name="field_text_format">Max length %1$s</string>
    <string name="field_dictionary_format">Choice %1$s: %2$s</string>
    <string name="field_discrete_format">One of %1$s</string>
    <string name="field_scale_format">A value in the range %1$s–%2$s</string>

    <string name="field_oid_label">Field OID</string>
    <string name="field_type_label">Type</string>
    <string name="field_header_label">Header</string>
    <string name="field_number_label">Number</string>
    <string name="field_label_label">Label</string>
    <string name="field_format_label">Format</string>
    <string name="field_problem_label">Problem</string>

    <string name="list_syncing_message">Syncing…</string>

    <string name="multi_page_form_previous_button">Previous</string>
    <string name="multi_page_form_next_button">Next</string>
    <string name="multi_page_form_submit_button">Submit</string>
    <string name="multi_page_form_previous_failed_title">Step Back Failed</string>
    <string name="multi_page_form_previous_failed_message">You can\'t step back if there is no previous field.</string>
    <string name="multi_page_form_next_failed_title">Step Forward Failed</string>
    <string name="multi_page_form_next_failed_message">You can\'t step forward if the current response is invalid or if there is no next field.</string>
    <string name="multi_page_form_error_finish_failed_title">The response for field %1$s is invalid. Please review and try again.</string>
    <string name="multi_page_form_error_finish_failed_message">This form requires a signature, which is not supported by this sample app.</string>

    <string name="login_username_field_hint">Username</string>
    <string name="login_password_field_hint">Password</string>
    <string name="login_log_in_button">Log In</string>
    <string name="login_register_button">Sign Up</string>

    <string name="one_page_form_submit_button">Submit</string>
    <string name="one_page_form_submitting_message">Sending Form…</string>
    <string name="one_page_form_error_title">Form Error</string>
    <string name="one_page_form_error_unexpected_field_type_message">A field in the form is of an unexpected type.</string>
    <string name="one_page_form_error_invalid_response_message">The \"%1$s\" field is not the correct format.</string>
    <string name="one_page_form_error_more_fields_message">There are more fields that need to be filled out in this form.</string>
    <string name="one_page_form_error_finish_failed_message">This form requires a signature, which is not supported by this sample app.</string>

    <string name="review_label">The form is ready to submit.</string>

    <string name="login_failed_title">Login Failed</string>
    <string name="login_failed_message">Please verify your credentials and try again.</string>

    <string name="submit_failed_title">Submit Failed</string>
    <string name="submit_failed_message">An error occurred while sending the form responses.</string>
    <string name="submit_succeeded_title">Submit Succeeded</string>
    <string name="submit_succeeded_message">The form responses were sent successfully!</string>

    <string name="sync_failed_title">Load Failed</string>
    <string name="sync_failed_message">An error occurred while loading the subjects and forms.</string>

    <string name="registration_submit_button">Submit</string>
    <string name="registration_failed_title">Registration Failed</string>
    
    <string name="registration_email_field_hint">Email</string>
    <string name="registration_email_confirmation_field_hint">Email confirmation</string>

    <string name="registration_password_prompt">Enter and confirm a new password:</string>
    <string name="registration_password_field_hint">Password</string>
    <string name="registration_password_confirmation_field_hint">Password confirmation</string>
    <string name="registration_password_rules_header">Passwords must meet the below criteria:</string>
    <string name="registration_password_rules_body"> - At least 8 characters long\n - At least one upper-case letter\n - At least one lower-case letter\n - At least one numberic digit</string>

    <string name="security_question_selection_prompt">Select a security question:</string>
    <string-array name="security_questions">
        <item>What year were you born?</item>
        <item>Last four digits of SSN or Tax ID number?</item>
        <item>What is your father\'s middle name?</item>
        <item>What was the name of your first school?</item>
        <item>Who was your childhood her?</item>
        <item>What is your favorite pastime?</item>
        <item>What is your all-time favorite sports team?</item>
        <item>What is your high school team or mascot?</item>
        <item>What make was your first car or bike?</item>
        <item>What is your pet\'s name?</item>
        <item>What is your mother\'s middle name?</item>
    </string-array>

    <string name="security_answer_field_hint">Answer</string>
    <string name="security_answer_button">Create Account</string>

    <string name="image_capture_header_label">Save an image to AppConnect</string>
    <string name="image_capture_submit_button">Submit</string>
    <string name="image_capture_take_pic_button">Take Photo</string>
    <string name="image_capture_choose_pic_button">Select Image</string>
    <string name="image_capture_error_title">Image Capture Error</string>
    <string name="image_capture_failed_title">Image Capture Failed</string>
    <string name="image_capture_succeeded_title">Image Capture Succeeded</string>
    <string name="image_capture_succeeded_message">Image successfully saved to AppConnect!</string>
    <string name="image_capture_saving_message">Saving image to AppConnect...</string>

</resources>
