<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegistrationPasswordActivity">

    <TextView
        android:id="@+id/registration_password_prompt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/registration_password_prompt" />

    <EditText
        android:id="@+id/registration_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:hint="@string/registration_password_field_hint"
        android:layout_below="@id/registration_password_prompt_view"
        android:layout_marginTop="8dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/registration_password_confirmation_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registration_password_field"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/registration_password_confirmation_field_hint"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/registration_submit_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registration_password_confirmation_field"
        android:layout_marginTop="8dp"
        android:text="@string/registration_submit_button"
        android:onClick="onSubmitButton" />

    <TextView
        android:id="@+id/registration_password_rules_header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_below="@id/registration_submit_password_button"
        android:layout_marginTop="8dp"
        android:text="@string/registration_password_rules_header" />

    <TextView
        android:id="@+id/registration_password_rules_body_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/registration_password_rules_header_view"
        android:text="@string/registration_password_rules_body" />

</RelativeLayout>
