<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiPageFormActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TableLayout
            android:id="@+id/field_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_oid_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/field_oid_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_type_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/field_type_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_number_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/field_number_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/field_label_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_format_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/field_format_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_problem_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/field_problem_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1" />

            </TableRow>

        </TableLayout>

        <EditText
            android:id="@+id/field_response_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/field_table"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textNoSuggestions" />

        <RadioGroup
            android:id="@+id/field_response_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/field_table">

            <RadioButton android:id="@+id/field_response_radio_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes"/>

            <RadioButton android:id="@+id/field_response_radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"/>

        </RadioGroup>

        <RelativeLayout
            android:id="@+id/field_response_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/field_table"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/field_response_scale_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

            <SeekBar
                android:id="@+id/field_response_scale_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/field_response_scale_label"
                android:layout_marginRight="8dp" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
